# eflips-schedule-rust

./: .mailmap  Cargo.toml  README.md  graph.json  graph_out.json  matching.json  pyproject.toml  test.py
.github/workflows/: CI.yml  cargotest.yml  pythontest.yml
src/: lib.rs  main.rs
test/: arch_dependent_result.json  arch_dependent_result_matching.json  both_node_weights.json  both_node_weights_matching.json  no_node_weights.json  no_node_weights_matching.json  one_node_weight.json  one_node_weight_matching.json  test_eflips_schedule_rust.py
