[package]
name = "eflips-schedule-rust"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eflips_schedule_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
petgraph = "0.6.5"
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
pathfinding = "4.10.0"
hopcroft-karp = "0.2.1"
log = "0.4.22"
tqdm = "0.7.0"
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1

