[package]
name = "eflips-schedule-rust"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eflips_schedule_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.23"
petgraph = "^0.6"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
pathfinding = "^4.11"
hopcroft-karp = "^0.2"
log = { version="^0.4" , features = ["release_max_level_warn"]}
rayon = "^1.10"
env_logger = "^0.11"

[profile.release]


[profile.dev]
opt-level = 1
