[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "eflips-schedule-rust"
description = "Vehicle Scheduling in Rust for eFLIPS."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [
  {name = "Ludger Heide", email = "ludger.heide@tu-berlin.de"},
]
readme = "README.md"
license = "AGPLV3.md"


[project.urls]
Repository = "https://github.com/mpm-tu-berlin/eflips-schedule-rust"

[tool.maturin]
features = ["pyo3/extension-module"]
